2011-01-04  Brian Weinstein  <bweinstein@apple.com>

        Windows build fix. Change the inline type of consumePermanently.

        * Shared/SandboxExtension.h:
        (WebKit::SandboxExtension::consumePermanently):

2011-01-04  Anders Carlsson  <andersca@apple.com>

        Reviewed by Dan Bernstein.

        <rdar://problem/8821203> Sandbox violations trying to access the Safari cache

        * Shared/SandboxExtension.h:
        (WebKit::SandboxExtension::consumePermanently):
        New function which consumes a sandbox extension and destroys it, making it impossible
        to later revoke it.

        * Shared/WebProcessCreationParameters.cpp:
        (WebKit::WebProcessCreationParameters::encode):
        (WebKit::WebProcessCreationParameters::decode):
        Encode and decode the path extension handle.

        * Shared/mac/SandboxExtensionMac.mm:
        (WebKit::SandboxExtension::createHandle):
        Standardize the path before creating the handle.

        * UIProcess/mac/WebContextMac.mm:
        (WebKit::WebContext::platformInitializeWebProcess):
        Create a sandbox extension for the cache path.

        * WebProcess/mac/WebProcessMac.mm:
        (WebKit::WebProcess::platformInitializeWebProcess):
        Consume the sandbox extension.

2011-01-04  Anders Carlsson  <andersca@apple.com>

        Fix build.

        * UIProcess/mac/TextCheckerMac.mm:
        (WebKit::TextChecker::getGuessesForWord):

2011-01-04  Jeff Miller  <jeffm@apple.com>

        Reviewed by Darin Adler.

        Mouse events in WebKit2 on Windows need to know whether the click activated the WebView to match WebKit1 behavior.
        https://bugs.webkit.org/show_bug.cgi?id=51228

        * Shared/WebEvent.h:
        (WebKit::WebMouseEvent::didActivateWebView):
        Add m_didActivateWebView to WebMouseEvent on Windows.

        * Shared/WebEventConversion.cpp:
        (WebKit::WebKit2PlatformMouseEvent::WebKit2PlatformMouseEvent):