@@ -1,3 +1,12 @@
+2011-01-04  Siddharth Mathur  <siddharth.mathur@nokia.com>
+
+        Reviewed by Laszlo Gombos.
+
+        Include unistd.h for sleep() for non-Windows builds.
+
+        * WebProcess/WebProcess.cpp:
+        * WebProcess/qt/WebProcessMainQt.cpp:
+
 2011-01-04  Brian Weinstein  <bweinstein@apple.com>
 
         Windows build fix. Change the inline type of consumePermanently.
